/*
 * Copyright 2022 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package trac.config;

option java_package = "com.accenture.trac.config";
option java_multiple_files = true;

import "trac/metadata/object_id.proto";
import "trac/metadata/object.proto";;
import "trac/metadata/job.proto";


message JobResult {

  metadata.TagHeader jobId = 1;
  JobStatus status = 2;

  string errorMessage = 3;
  repeated string stackTrace = 4;

  map<string, metadata.ObjectDefinition> objects = 5;
}

enum JobStatus {

  JOB_STATUS_NOT_SET = 0;
  SUCCEEDED = 1;
  FAILED = 2;
}