/*
 * Licensed to the Fintech Open Source Foundation (FINOS) under one or
 * more contributor license agreements. See the NOTICE file distributed
 * with this work for additional information regarding copyright ownership.
 * FINOS licenses this file to you under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with the
 * License. You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package tracdap.config;

option java_package = "org.finos.tracdap.config";
option java_outer_classname = "CommonConfigProto";
option java_multiple_files = true;

import "tracdap/metadata/storage.proto";


message _ConfigFile {

  map<string, string> config = 1;
}


message PluginConfig {

  string protocol = 1;
  string subProtocol = 5;
  map<string, string> publicProperties = 4;
  map<string, string> properties = 2;
  map<string, string> secrets = 3;
}


message PlatformInfo {

  string environment = 1;
  bool production = 2;

  map<string, string> deploymentInfo = 3;
}


message ServiceConfig {

  optional bool enabled = 1;

  string alias = 2;
  uint32 port = 3;

  map<string, string> properties = 4;
}
